# twmr-rl

./: pyproject.toml  train_jax_ppo.py
sandbox/Tom/: graph_ppo_networks.py  phys_graph_ppo_networks.py  tombot_gnn.py
