[project]
name = "transformable-leg-wheel-robot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.8.2",
    "warp-lang>=1.10.1",
    "playground@git+https://github.com/google-deepmind/mujoco_playground.git#egg=1bd244fa9c51fa7074c7a449934f556d898f7a15",
    "twmr",
    "wmr",
    "ipykernel>=7.1.0",
    "playground>=0.1.0",
    "mujoco>=3.6.0",
    "mujoco-mjx>=3.6.0",
]

[tool.uv.workspace]
members = [
 "packages/twmr",
 "packages/wmr",
]

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
mujoco = { index = "mujoco" }
warp-lang = { index = "nvidia" }
mujoco-mjx = { git = "https://github.com/google-deepmind/mujoco", rev = "main", subdirectory = "mjx" }
twmr = { workspace = true }
wmr = { workspace = true }

[tool.ruff]
line-length = 96
